# university-exam-tests

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.cursor/plans/: add-name-to-practice-tests-unique-constraint.plan.md  admin-panel-restructure-75697862.plan.md  answer-key-counter-component-1fc1783c.plan.md  book-detail-ui-improvements.plan.md  test-selection-ui-improvement-63d05a74.plan.md
backup/: PRD.md  api-improvements.md  db-improvements.md  development-plan.md  frontend-update-03.md  project-update.md  role-management-implementation-plan.md
backup/migrations/: 00004_create_subjects_table.sql  00008_create_roles_table.sql  00009_create_user_roles_table.sql  00010_create_admin_user.sql  00011_create_lessons_table.sql  00016_add_subject_id_to_practice_tests.sql
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  openapi.rs  server.rs
crates/api/src/dto/request/: auth_request.rs  mod.rs  test_request.rs  user_request.rs
crates/api/src/dto/response/: auth_response.rs  health_response.rs  mod.rs  role_response.rs  test_response.rs
crates/api/src/errors/: app_error.rs  mod.rs
crates/api/src/extractors/: current_user.rs  mod.rs  require_admin.rs
crates/api/src/handlers/: auth_handler.rs  health_handler.rs  mod.rs  role_handler.rs  test_handler.rs  user_handler.rs
crates/api/src/middleware/: auth_middleware.rs  mod.rs
crates/api/src/routes/: auth_routes.rs  health_routes.rs  mod.rs  role_routes.rs  test_routes.rs  user_routes.rs
crates/api/src/state/: app_state.rs  mod.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/dto/: auth_dto.rs  mod.rs  test_dto.rs
crates/application/src/services/: auth_service.rs  mod.rs  result_service.rs  test_management_service.rs  test_solving_service.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/entities/: exam_type.rs  lesson.rs  mod.rs  practice_test.rs  refresh_token.rs  role.rs  subject.rs  test_book.rs  test_result.rs  user.rs
crates/domain/src/errors/: domain_error.rs  mod.rs
crates/domain/src/repositories/: exam_type_repository.rs  lesson_repository.rs  mod.rs  practice_test_repository.rs  refresh_token_repository.rs  role_repository.rs  subject_repository.rs  test_book_repository.rs  test_book_subject_repository.rs  test_result_repository.rs  user_repository.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/config/: settings.rs
crates/infrastructure/src/database/: connection.rs  mod.rs
crates/infrastructure/src/database/repositories/: exam_type_repository_impl.rs  lesson_repository_impl.rs  mod.rs  practice_test_repository_impl.rs  refresh_token_repository_impl.rs  role_repository_impl.rs  subject_repository_impl.rs  test_book_repository_impl.rs  test_book_subject_repository_impl.rs  test_result_repository_impl.rs  user_repository_impl.rs
crates/infrastructure/src/security/: jwt.rs  mod.rs  password.rs
docs/: admin-dashboard-implementation.md  backend-improvements-02.md  backend-improvements-03.md  backend-optimization-analysis.md  custom-dropdown-implementation.md  dashboard-restructure-proposal.md  db-improvements-02.md  db-improvements-03.md  frontend-update.md  frontend-user-panel-improvements.md  project-documentation.md
frontend/: ADMIN_PANEL_PLAN.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: styles.scss
frontend/src/app/: app.routes.ts  app.scss  app.ts
frontend/src/app/core/guards/: admin.guard.ts  auth.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts  error.interceptor.ts
frontend/src/app/core/services/: api.service.ts  auth.service.ts  error-handler.service.ts  token-storage.service.ts
frontend/src/app/features/admin/: admin.routes.ts
frontend/src/app/features/admin/services/: admin.service.ts
frontend/src/app/features/auth/: auth.routes.ts
frontend/src/app/features/results/: results.routes.ts
frontend/src/app/features/results/services/: results.service.ts
frontend/src/app/features/tests/: tests.routes.ts
frontend/src/app/features/tests/services/: test.service.ts
frontend/src/app/models/: api.models.ts  auth.models.ts  role.models.ts  test.models.ts  user.models.ts
frontend/src/app/shared/components/answer-key-counter/: answer-key-counter.component.ts
frontend/src/app/shared/components/custom-dropdown/: custom-dropdown.component.ts
frontend/src/app/shared/components/error-message/: error-message.component.ts
migrations/: 00001_create_users_table.sql  00001_initial_schema.sql  00002_create_refresh_tokens_table.sql  00003_create_exam_types_table.sql  00005_create_test_books_table.sql  00006_create_practice_tests_table.sql  00007_create_test_results_table.sql  00012_add_lesson_id_to_subjects.sql  00013_add_lesson_id_to_test_books.sql  00014_create_test_book_subjects_table.sql  00015_remove_subject_id_from_test_books.sql  00017_add_name_to_practice_tests_unique_constraint.sql
scripts/: generate_admin_hash.sh
(+36 files in other folders)
